--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-router": "^7.3.0",
+        "react-router-dom": "^7.3.0",
         "rehype-autolink-headings": "^7.1.0",
         "rehype-katex": "^7.0.1",
         "rehype-pretty-code": "^0.14.1",
