--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "@mdx-js/rollup": "^3.1.0",
         "@next/mdx": "^15.2.2",
         "@popperjs/core": "^2.11.8",
-        "@rollup/rollup-darwin-arm64": "^4.35.0",
         "@shikijs/twoslash": "^3.2.1",
         "@tailwindcss/vite": "^4.0.14",
         "@types/mdx": "^2.0.13",
@@ -47,6 +46,7 @@
         "remark-math": "^6.0.0",
         "remark-parse": "^11.0.0",
         "remark-rehype": "^11.1.1",
+        "rollup": "^4.35.0",
         "sharp": "^0.33.5",
         "shiki": "^3.2.1",
         "sirv": "^3.0.1",
