--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@shikijs/twoslash": "^3.2.1",
         "@tailwindcss/vite": "^4.0.14",
         "@types/mdx": "^2.0.13",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.21",
         "clsx": "^2.1.1",
         "compression": "^1.8.0",
