--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@next/mdx": "^15.2.2",
         "@popperjs/core": "^2.11.8",
         "@shikijs/twoslash": "^3.2.1",
+        "@tailwindcss/oxide": "^4.0.14",
         "@tailwindcss/vite": "^4.0.14",
         "@types/mdx": "^2.0.13",
         "@vitejs/plugin-react": "^4.3.4",
