--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "hast-util-to-estree": "^3.1.3",
         "highcharts": "^12.1.2",
         "highcharts-react-official": "^3.2.1",
+        "lightningcss": "^1.29.3",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
